<!--
  ~ Copyright (c) 2020 by Jainesh Desai
  ~ Created by Jainesh desai on 2020.
  -->

<resources>
    <string name="app_name">BLEConnectionSample</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="turn_on">On</string>
    <string name="turn_off">Off</string>
    <string name="title_led_state">LED</string>
    <string name="title_button_state">Button</string>
    <string name="state">State</string>
    <string name="button_pressed">PRESSED</string>
    <string name="button_released">RELEASED</string>
    <string name="button_unknown">UNKNOWN</string>
    <string name="led_summary">Toggle the switch to turn the LED 3 on or off.</string>
    <string name="button_summary">Press Button 1 on the dev kit.</string>

    <string name="location_permission_title">LOCATION PERMISSION REQUIRED</string>
    <string name="location_permission_info">From Android 6.0 Marshmallow onwards the application requires Location
        permission in order to scan for Bluetooth Low Energy devices.
        \n\nThis is because Bluetooth LE devices may be used to determine the phone\'s and user\'s location.
    </string>
    <string name="location_permission_action">Grant permission</string>
    <string name="location_permission_settings">Settings</string>

    <string name="bluetooth_disabled_title">BLUETOOTH DISABLED</string>
    <string name="bluetooth_disabled_info">The Bluetooth adapter is turned off. Click the button below to enable it.
    </string>
    <string name="bluetooth_disabled_action">Enable</string>

    <string name="blinky_guide_title">CAN\'T SEE YOUR BLE Device?</string>
    <string name="blinky_guide_info">1. Make sure the BLE is <b>turned on</b> and is connected to a power source using a
        micro USB cable or a coin cell is plugged in.
    </string>
    <string name="blinky_guide_location_info">2. Location is turned off. Some Android phones require it enabled in order
        to scan for Bluetooth LE devices.
        If you are sure your BLE is advertising and it doesn\'t show up here, click the button below to enable
        Location.
    </string>
    <string name="blinky_guide_location_action">Enable</string>

    <string name="not_supported_title">DEVICE NOT SUPPORTED</string>
    <string name="not_supported_info">1. The BLE service hasn\'t been found on the device\'s attribute table.
        \n\n2. Make sure the BLE is flashed with the correct firmware.
        \n\n3. If you used the BLE with another firmware before, the old services might have been cached by the system.
    </string>
    <string name="not_supported_action">Fix and try again</string>

    <string name="state_scanning">Scanning…</string>
    <string name="state_connecting">Connecting…</string>
    <string name="state_discovering_services">Discovering services…</string>
    <string name="state_initializing">Discovered Services</string>
    <string name="state_disconnected">Device disconnected.</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="str_connectionState">Connected</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_connected_signal">get</string>
    <string name="str_mode">Mode</string>
    <string name="str_setup">Setup</string>
    <string name="str_sensor">Sensor</string>
    <string name="str_close_application">Are sure you want to close application?</string>
    <string name="str_discard_operation">Are sure you want to discard operations?</string>
    <string name="str_close">Close</string>
    <string name="str_no">No</string>
    <string name="str_yes">Yes</string>
    <string name="str_exit">Exit</string>
    <string name="str_error">Error</string>
    <string name="str_try_again">Try again</string>
    <string name="str_device_list">Device List</string>
    <string name="str_enable_bt">Enable bluetooth</string>
    <string name="str_location_permission">Location permission</string>
    <string name="str_connected">Connected</string>
</resources>
