<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2020 by Jainesh Desai
  ~ Created by Jainesh desai on 2020.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    tools:ignore="ContentDescription">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        app:srcCompat="@drawable/ic_location_off" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/location_permission_title"
        android:textColor="@color/textColor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/location_permission_info"
        android:textColor="@color/textColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/action_grant_location_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_backgrounds"
            android:padding="5dp"
            android:text="@string/location_permission_action"
            android:textColor="@color/textColor" />

        <Button
            android:id="@+id/action_permission_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_backgrounds"
            android:text="@string/location_permission_settings"
            android:textColor="@color/textColor"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

</LinearLayout>